# rust-xp-ollama

./: .gitignore  Cargo.toml  README.md
_mock-data/: for-embeddings.txt
examples/: c01-simple.rs  c02-context.rs  c03-chat.rs  c04-embeddings.rs  c05-models.rs
src/: lib.rs
